--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../portifolio/imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="efeito_geral.css">
 
     <title>Portifolio</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="interface">
-            <h1 class="poke">Portifolio</h1>
+            <h1 class="titulo">Portifolio</h1>
         
         <nav class="menu">
             <ul>
@@ -30,27 +30,22 @@
         </div>
     </header>
     <main>
-        <div>
-            <section class="topo">
-                <section class="interface">
-                    <section class="flex">
-                        <div class="texto">
+        <section>
+            <div class="topo">
+                <div class="interface">
+                    <div class="flex">
+                        <section class="texto">
                             <h1>O ontem é história, o amanhã, um mistério e o agora, uma dádiva. É por isso que se chama presente.</h1>
                             <p>A melhor forma de se resolver qualquer tipo de problema é tendo uma conversa sincera e coerência com qualquer pessoa sobre qualquer assunto, isso se chama caráter.</p>
-                            <section class="contato">
-                                <a href="contato.html">
-                                    <button>Entre em contato
-                                </a>
-                            </section>
                             
-                        </div>
-                        <div class="imagem">
+                        </section>
+                        <section class="imagem">
                             <img src="./imagens/wallhaven-qze3r7-removebg-preview.png" alt="imagem">
-                        </div>
-                    </section>
-                </section>
-            </section>
-        </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
