--- a/sobre_min.html
+++ b/sobre_min.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="efeito_geral.css">
 
     <title>Portifolio</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="interface">
-            <h1 class="poke">Portifolio</h1>
+            <h1 class="titulo">Portifolio</h1>
 
         <nav class="menu">
             <ul>
@@ -35,11 +35,11 @@
             <div class="interface">
                 <section class="flex">
                     <div class="texto">
-                        <div class="lol">
+                        <section class="info">
                             <h2>De onde vim</h2>
                             <p>Me chamo Kevyn, tenho 17 anos e sou de Belém do Pará, nascido e criado na capital. Além disso, sou técnico em redes de computadores, na escola Paulo VI, por ultimo, mas não menos importante, sou estagiário na Rav uma empresa de criação de software personalizados para diversas atividades.</p>
                             
-                        </div> 
+                        </section> 
                         <section class="lista">
                             <h2>Minhas habilidade</h2>
                             <ul>
@@ -49,16 +49,10 @@
                                 <li>JavaScript</li>
                             </ul>
                         </section>
-                        <div class="lol">
+                        <section class="info">
                             <h2>Hobbe's </h2>
                             <p>Tenho vário hobbes, mas em especial cozinhar é o meu preferido. Além desse, gosto de comer, praticar calisténia, nadar e andar de bicileta.</p>
-                        </div>
-                        <section class="contato">
-                            <a href="contato.html">
-                                <button>Entre em contato
-                            </a>
                         </section>
-                        
                     </div>
                     <div class="imagem">
                         <img src="" alt="">
