--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <nav class="menu">
             <ul>
-                <li class="li"><a href="index.html"><p style="color:#48ff00">Inicio</p></a></li>
+                <li class="li"><a href="index.html"><p class="cor">Inicio</p></a></li>
                 <li class="li"><a href="meus_projetos.html"><p>Meus Projetos</p></a></li>
                 <li class="li"><a href="sobre_min.html"><p>Sobre mim</p></a></li>
             </ul>
