--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -18,7 +18,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html"><p>Inicio</p></a></li>
-                <li><a href="meus_projetos.html"><p style="color:#48ff00">Meus Projetos</p></a></li>
+                <li><a href="meus_projetos.html"><p class="cor">Meus Projetos</p></a></li>
                 <li><a href="sobre_min.html"><p>Sobre mim</p></a></li>
             </ul>
         </nav>
