--- a/sobre_min.html
+++ b/sobre_min.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html"><p>Inicio</p></a></li>
                 <li><a href="meus_projetos.html"><p>Meus Projetos</p></a></li>
-                <li><a href="sobre_min.html"><p style="color: #48ff00;">Sobre mim</p></a></li>
+                <li><a href="sobre_min.html"><p class="cor">Sobre mim</p></a></li>
             </ul>
         </nav>
     </nav>
