--- a/contato.html
+++ b/contato.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="contato.css">
     <link rel="stylesheet" href="efeito_geral.css">
+    <link rel="stylesheet" href="contato.css">
     <title>contato</title>
 </head>
 <body>
@@ -27,9 +27,7 @@
     </div>
     </div>
 </header>
- 
-    
-      <h1>Entre em contato comigo!</h1>
+      <h1 class="posição">Entre em contato comigo!</h1>
       <p class="brilho">Por favor, preencha todas as informações abaixo.</p>
       <form autocomplete="off">
         <fieldset>
