--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="flex">
                         <section class="texto">
                             <h1>O ontem é história, o amanhã, um mistério e o agora, uma dádiva. É por isso que se chama presente.</h1>
-                            <p>A melhor forma de se resolver qualquer tipo de problema é tendo uma conversa sincera e coerência com qualquer pessoa sobre qualquer assunto, isso se chama caráter.</p>
+                            <p class="paragrafo">A melhor forma de se resolver qualquer tipo de problema é tendo uma conversa sincera e coerência com qualquer pessoa sobre qualquer assunto, isso se chama caráter.</p>
                             
                         </section>
                         <section class="imagem">
