--- a/sobre_min.html
+++ b/sobre_min.html
@@ -37,7 +37,7 @@
                     <div class="texto">
                         <section class="info">
                             <h2>De onde vim</h2>
-                            <p>Me chamo Kevyn, tenho 17 anos e sou de Belém do Pará, nascido e criado na capital. Além disso, sou técnico em redes de computadores, na escola Paulo VI, por ultimo, mas não menos importante, sou estagiário na Rav uma empresa de criação de software personalizados para diversas atividades.</p>
+                            <p class="paragrafo">Me chamo Kevyn, tenho 17 anos e sou de Belém do Pará, nascido e criado na capital. Além disso, sou técnico em redes de computadores, na escola Paulo VI, por ultimo, mas não menos importante, sou estagiário na Rav uma empresa de criação de software personalizados para diversas atividades.</p>
                             
                         </section> 
                         <section class="lista">
@@ -51,7 +51,7 @@
                         </section>
                         <section class="info">
                             <h2>Hobbe's </h2>
-                            <p>Tenho vário hobbes, mas em especial cozinhar é o meu preferido. Além desse, gosto de comer, praticar calisténia, nadar e andar de bicileta.</p>
+                            <p class="paragrafo">Tenho vário hobbes, mas em especial cozinhar é o meu preferido. Além desse, gosto de comer, praticar calisténia, nadar e andar de bicileta.</p>
                         </section>
                     </div>
                     <div class="imagem">
